# customer-intelligence-ai-service

./: .gitignore  README.md  debug_schema.py  dockerfile  pyproject.toml  railway.json  railway.toml  render.yaml  requirements.in  requirements.txt  test_ai_service.py  verify_deployment.py
app/: main.py
app/app/: main.py
app/models/: schemas.py
app/services/: ai_engine.py  cache_service.py
railway_test_env/: pyvenv.cfg
railway_test_env/Scripts/: activate  activate.bat
