[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "customer-intelligence-ai-service"
version = "1.0.0"
description = "Customer Intelligence AI Service with 90.5% churn prediction accuracy"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "fastapi>=0.68.0",
    "uvicorn[standard]>=0.15.0",
    "pydantic>=1.8.0",
    "structlog>=21.1.0",
    "transformers>=4.21.0",
    "torch>=1.12.0",
    "sentence-transformers>=2.2.0",
    "scikit-learn>=1.1.0",
    "numpy>=1.21.0",
    "huggingface-hub>=0.34.0",
    "redis>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-asyncio>=0.18.0",
    "black>=22.0.0",
    "isort>=5.10.0",
    "flake8>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/customer-intelligence-ai-service"
Documentation = "https://github.com/yourusername/customer-intelligence-ai-service"
Repository = "https://github.com/yourusername/customer-intelligence-ai-service.git"
"Bug Tracker" = "https://github.com/yourusername/customer-intelligence-ai-service/issues"
